tests/NormalTests/paczka1/small_fuzzy/99329111.err
Error in line 1: XbQ3kS A423 99,0
Error in line 6: cvIEk A91 21,2
Error in line 14: 85nMH S633 36,6
